Previous message applies to this commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                 margin: 20px auto;
             }
             .post + .post{
-                margin-top: 20px;
+                margin-top: 60px;
             }
             .post-title{
                 font-weight: bold;
@@ -51,7 +51,7 @@
         </style>
     </head>
     <body>
-        <h1>BLOG!!<a href="/newpost" class="new-post">New Post</a></h1>
+        <a href="/mainblog"><h1>BLOG!!</h1></a><a href="/newpost" class="new-post"><h1>New Post</h1></a>
 
         {% block content %}
 
