--- a/templates/mainblog.html
+++ b/templates/mainblog.html
@@ -6,9 +6,12 @@
 {% for post in posts %}
 
     <div class="post">
-        <div class="post-title">{{post.title}}<br>({{post.date}})</div><br>
+        <div class="post-title">
+            <a href="/blog/{{post.key().id()}}" >{{post.title}}</a>
+        </div>
+        <h4>({{post.date}})</h4>
         <p class="post-body">{{post.post}}</p>
-    </div>
+    </div><br>
 {% endfor %}
 
 {% endblock %}
